<resources>
    <string name="app_name">CocktailBar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cocktails_header">My cocktails</string>
    <string name="content_description">Content Description</string>
    <string name="add_hint">Add your first cocktail here</string>
    <string name="cocktail_name">Title</string>
    <string name="cocktail_description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="cocktail_recipe">Recipe</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="ingredient_name">Ingredient\'s name</string>
</resources>