<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="328dp"
    android:layout_height="328dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="50dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/DidactGothic.32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_ingredient"
            app:layout_constraintBottom_toTopOf="@id/ingredient_til"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredient_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="false"
            app:boxCornerRadiusBottomEnd="32dp"
            app:boxCornerRadiusBottomStart="32dp"
            app:boxCornerRadiusTopEnd="32dp"
            app:boxCornerRadiusTopStart="32dp"
            app:layout_constraintBottom_toTopOf="@id/add_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/DidactGothic.16"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ingredient_name" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/add_btn"
            style="@style/DidactGothic.24.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/blue"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/cancel_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_btn"
            style="@style/DidactGothic.24.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/blue"
            app:strokeWidth="1dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>